2005-03-24  Dennis Cranston <dennis_cranston@yahoo.com>
 
 	* glines.c:  Use Header capitalization for category titles.
 	
2005-03-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Fullscreen patch from Marco Colombo.

2005-03-24  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.h: 
	* glines.schemas.in:
	* glines.c (DEFAULT_GAME_SIZE): 	
	* Makefile.am: Make Medium the same as the old version and also
	make it the default. Make small, meaner and nastier. Also add a
	schema for the size parameter.

2005-03-23  Richard Hoelscher  <rah@rahga.com>

	* Makefile.am: support multiple scorefiles
	* glines.c: Marco's patch for high-score-support

	* glines.h:
	* glines.c: Marco Colombo's patch for configurable playfield
	size has been applied. Many macros have been replaced by variables,
	look for hfieldsize, vfieldsize, ncolors, npieces, and several more.
	(refresh_preview_pixmaps): Creates a blank pixmap for use in preview.
	(draw_preview): Now handles up to MAXNPIECES preview pixmaps.
	(route)(find_lines): Bulk of  macro replacement took place here.
	(set_sizes)(size_callback): New. Handle setting size from prefs.
	(game_props_callback): Add support for switching sizes among "Small",
	"Medium", "Large".
	(main): Use new alignment properties in the preview frame.

2005-03-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Patches from Dennis Cranston
	<dennis_cranston@yahoo.com> to make the game more HIG compliant.

	* Makefile.am (DISTCLEANFILES): Make sure installation doesn't
	fail if touch can't access the scores directory.

2005-03-17  Richard Hoelscher  <rah@rahga.com>

	* glines.c (create_menus): Use GtkUIManager API for menus.
	(move_timeout_changed_cb): Prefs checkbox watches gconf change.
	(refresh_pixmaps): Warnings on render error.
	(show_image_warning): New theme warning dialog.
	(main): Remove an unused hbox from the first revision.

2005-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>
